--- a/contacts.html
+++ b/contacts.html
@@ -55,9 +55,7 @@
       </div>
     </div>
     <div class="page">
-      <!-- Page Header--><a
-        class="banner banner-top"
-        href="index.html"
+      <!-- Page Header--><a class="banner banner-top" href="index.html"
         ><img src="images/marketing_banner.png" alt="editkaro" height="0"
       /></a>
       <header class="section page-header">
@@ -263,8 +261,7 @@
         </div>
       </section>
       <!-- Get in Touch-->
-      <section class="section section-md bg-gray-100"
-      id="touch">
+      <section class="section section-md bg-gray-100" id="touch">
         <div class="container">
           <h3 class="text-center">Get in Touch</h3>
           <div class="row justify-content-center">
@@ -372,9 +369,7 @@
           const output = $("#form-output-global");
 
           if (!name || !email || !message || !phone) {
-            alert(
-              "Kindly fill all the fields."
-            );
+            alert("Kindly fill all the fields.");
             return;
           }
 
@@ -424,101 +419,106 @@
         });
       </script>
 
-      <!-- Page Footer--><a
-      class="banner"
-      href="index.html"
-      ><img src="images/digital_1.jpg" alt="editkaro" height="0"
-    /></a>
-    <footer class="section footer-classic">
-      <div class="footer-classic-main">
-        <div class="container">
-          <div class="row row-50 justify-content-lg-between">
-            <div class="col-sm-7 col-lg-3 col-xl-2">
-              <a class="brand" href="index.html"
-                ><img
-                  src="images/logo.png"
-                  alt=""
-                  width="199"
-                  height="41"
-              /></a>
-              <p>
-                <span style="max-width: 250px"
-                  >Our agency provides quality digital marketing
-                  services.</span
+      <!-- Page Footer--><a class="banner" href="index.html"
+        ><img src="images/digital_1.jpg" alt="editkaro" height="0"
+      /></a>
+      <footer class="section footer-classic">
+        <div class="footer-classic-main">
+          <div class="container">
+            <div class="row row-50 justify-content-lg-between">
+              <div class="col-sm-7 col-lg-3 col-xl-2">
+                <a class="brand" href="index.html"
+                  ><img src="images/logo.png" alt="" width="199" height="41"
+                /></a>
+                <p>
+                  <span style="max-width: 250px"
+                    >Our agency provides quality digital marketing
+                    services.</span
+                  >
+                </p>
+                <a
+                  class="button button-sm button-default-outline button-winona"
+                  href="contacts.html#touch"
+                  >Get in Touch</a
                 >
-              </p>
-              <a
-                class="button button-sm button-default-outline button-winona"
-                href="contacts.html#touch"
-                >Get in Touch</a
-              >
-            </div>
-            <div class="col-sm-5 col-lg-3 col-xl-2">
-              <h4 class="footer-classic-title">About</h4>
-              <ul class="list footer-classic-list">
-                <li><a href="about-us.html">About Us</a></li>
-                <li><a href="about-us.html">Careers</a></li>
-                <li><a href="index.html">Press and media</a></li>
-              </ul>
-            </div>
-            <div class="col-sm-7 col-lg-5 col-xl-3">
-              <h4 class="footer-classic-title">Quick Links</h4>
-              <ul class="list footer-classic-list footer-classic-list_2-cols">
-                <li><a href="contacts.html#touch">Sign Up</a></li>
-                <li><a href="about-us.html">Our Team</a></li>
-                <li><a href="https://rishabheditkaroportfolio.netlify.app/" target="_blank">Portfolio</a></li>
-                <li><a href="contacts.html#touch">Pricing</a></li>
-                <li><a href="index.html#testimonials">Testimonials</a></li>
-                <li><a href="about-us.html">FAQ</a></li>
-                <li><a href="about-us.html">Services</a></li>
-              </ul>
-            </div>
-            <div class="col-sm-5 col-lg-9 col-xl-2">
-              <h4 class="footer-classic-title">Contact Us</h4>
-              <div class="row row-20 row-sm-35">
-                <div class="col-6 col-sm-12 col-lg-8 col-xl-12">
-                  <div class="row row-10 text-default">
-                    <div class="col-lg-6 col-xl-12">
-                      <a href="mailto:#">info@demolink.org</a>
-                    </div>
-                    <div class="col-lg-6 col-xl-12">
-                      <a class="big" href="tel:#">+1-853-234-65</a>
+              </div>
+              <div class="col-sm-5 col-lg-3 col-xl-2">
+                <h4 class="footer-classic-title">About</h4>
+                <ul class="list footer-classic-list">
+                  <li><a href="about-us.html">About Us</a></li>
+                  <li><a href="about-us.html">Careers</a></li>
+                  <li><a href="index.html">Press and media</a></li>
+                </ul>
+              </div>
+              <div class="col-sm-7 col-lg-5 col-xl-3">
+                <h4 class="footer-classic-title">Quick Links</h4>
+                <ul class="list footer-classic-list footer-classic-list_2-cols">
+                  <li><a href="contacts.html#touch">Sign Up</a></li>
+                  <li><a href="about-us.html">Our Team</a></li>
+                  <li>
+                    <a
+                      href="https://rishabheditkaroportfolio.netlify.app/"
+                      target="_blank"
+                      >Portfolio</a
+                    >
+                  </li>
+                  <li><a href="contacts.html#touch">Pricing</a></li>
+                  <li><a href="index.html#testimonials">Testimonials</a></li>
+                  <li><a href="about-us.html">FAQ</a></li>
+                  <li><a href="about-us.html">Services</a></li>
+                </ul>
+              </div>
+              <div class="col-sm-5 col-lg-9 col-xl-2">
+                <h4 class="footer-classic-title">Contact Us</h4>
+                <div class="row row-20 row-sm-35">
+                  <div class="col-6 col-sm-12 col-lg-8 col-xl-12">
+                    <div class="row row-10 text-default">
+                      <div class="col-lg-6 col-xl-12">
+                        <a href="mailto:#">info@demolink.org</a>
+                      </div>
+                      <div class="col-lg-6 col-xl-12">
+                        <a class="big" href="tel:#">+1-853-234-65</a>
+                      </div>
                     </div>
                   </div>
-                </div>
-                <div
-                  class="col-6 col-sm-12 col-lg-4 col-xl-12 text-right text-sm-left"
-                >
-                  <div class="group group-xs">
-                    <a class="link link-social-1 mdi mdi-twitter" href="index.html"></a
-                    ><a
-                      class="link link-social-1 mdi mdi-facebook"
-                      href="index.html"
-                    ></a
-                    ><a
-                      class="link link-social-1 mdi mdi-instagram"
-                      href="index.html"
-                    ></a>
+                  <div
+                    class="col-6 col-sm-12 col-lg-4 col-xl-12 text-right text-sm-left"
+                  >
+                    <div class="group group-xs">
+                      <a
+                        class="link link-social-1 mdi mdi-twitter"
+                        href="index.html"
+                      ></a
+                      ><a
+                        class="link link-social-1 mdi mdi-facebook"
+                        href="index.html"
+                      ></a
+                      ><a
+                        class="link link-social-1 mdi mdi-instagram"
+                        href="index.html"
+                      ></a>
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
-      <div class="footer-classic-aside">
-        <div class="container">
-          <p class="rights">
-            <span>&copy;&nbsp;</span><span class="copyright-year"></span>. All
-            Rights Reserved. Design by
-            <a href="https://github.com/Rishabh01505" target="_blank">Rishabh Bhatnagar</a>
-          </p>
+        <div class="footer-classic-aside">
+          <div class="container">
+            <p class="rights">
+              <span>&copy;&nbsp;</span><span class="copyright-year"></span>. All
+              Rights Reserved. Design by
+              <a href="https://github.com/Rishabh01505" target="_blank"
+                >Rishabh Bhatnagar</a
+              >
+            </p>
+          </div>
         </div>
-      </div>
-    </footer>
-  </div>
-  <div class="snackbars" id="form-output-global"></div>
-  <script src="js/core.min.js"></script>
-  <script src="js/script.js"></script>
-</body>
+      </footer>
+    </div>
+    <div class="snackbars" id="form-output-global"></div>
+    <script src="js/core.min.js"></script>
+    <script src="js/script.js"></script>
+  </body>
 </html>
