--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
     </div>
     <div class="page">
       <!-- Page Header--><a
-      class="banner banner-top"
-      href="index.html"
-      target="_blank"
+        class="banner banner-top"
+        href="index.html"
+        target="_blank"
         ><img src="images/marketing_banner.png" alt="editkaro" height="0"
       /></a>
       <header class="section page-header">
@@ -425,7 +425,9 @@
                       <li>Increased exposure of products and services;</li>
                       <li>Boundless universal accessibility.</li>
                     </ul>
-                    <a class="button button-default button-winona" href="contacts.html#touch"
+                    <a
+                      class="button button-default button-winona"
+                      href="contacts.html#touch"
                       >Learn More</a
                     >
                   </div>
@@ -451,12 +453,7 @@
               class="col-sm-10 col-lg-7 wow fadeIn text-center"
               data-wow-delay=".2s"
             >
-              <img
-                src="images/profit.jpg"
-                alt=""
-                width="594"
-                height="493"
-              />
+              <img src="images/profit.jpg" alt="" width="594" height="493" />
             </div>
           </div>
         </div>
@@ -619,47 +616,27 @@
           >
             <div class="wow clipInLeft">
               <a class="link-image-1" href="#"
-                ><img
-                  src="images/client1.jpg"
-                  alt=""
-                  width="88"
-                  height="77"
+                ><img src="images/client1.jpg" alt="" width="88" height="77"
               /></a>
             </div>
             <div class="wow clipInLeft" data-wow-delay=".1s">
               <a class="link-image-1" href="#"
-                ><img
-                  src="images/client2.jpg"
-                  alt=""
-                  width="73"
-                  height="78"
+                ><img src="images/client2.jpg" alt="" width="73" height="78"
               /></a>
             </div>
             <div class="wow clipInLeft" data-wow-delay=".2s">
               <a class="link-image-1" href="#"
-                ><img
-                  src="images/client3.jpg"
-                  alt=""
-                  width="96"
-                  height="62"
+                ><img src="images/client3.jpg" alt="" width="96" height="62"
               /></a>
             </div>
             <div class="wow clipInLeft" data-wow-delay=".3s">
               <a class="link-image-1" href="#"
-                ><img
-                  src="images/client4.jpg"
-                  alt=""
-                  width="78"
-                  height="80"
+                ><img src="images/client4.jpg" alt="" width="78" height="80"
               /></a>
             </div>
             <div class="wow clipInLeft" data-wow-delay=".4s">
               <a class="link-image-1" href="#"
-                ><img
-                  src="images/client5.jpg"
-                  alt=""
-                  width="87"
-                  height="76"
+                ><img src="images/client5.jpg" alt="" width="87" height="76"
               /></a>
             </div>
           </div>
@@ -701,9 +678,7 @@
         </div>
       </section>
 
-      <!-- Page Footer--><a
-        class="banner"
-        href="index.html"
+      <!-- Page Footer--><a class="banner" href="index.html"
         ><img src="images/digital_1.jpg" alt="editkaro" height="0"
       /></a>
       <footer class="section footer-classic">
@@ -712,11 +687,7 @@
             <div class="row row-50 justify-content-lg-between">
               <div class="col-sm-7 col-lg-3 col-xl-2">
                 <a class="brand" href="index.html"
-                  ><img
-                    src="images/logo.png"
-                    alt=""
-                    width="199"
-                    height="41"
+                  ><img src="images/logo.png" alt="" width="199" height="41"
                 /></a>
                 <p>
                   <span style="max-width: 250px"
@@ -743,7 +714,13 @@
                 <ul class="list footer-classic-list footer-classic-list_2-cols">
                   <li><a href="contacts.html#touch">Sign Up</a></li>
                   <li><a href="about-us.html">Our Team</a></li>
-                  <li><a href="https://rishabheditkaroportfolio.netlify.app/" target="_blank">Portfolio</a></li>
+                  <li>
+                    <a
+                      href="https://rishabheditkaroportfolio.netlify.app/"
+                      target="_blank"
+                      >Portfolio</a
+                    >
+                  </li>
                   <li><a href="contacts.html#touch">Pricing</a></li>
                   <li><a href="index.html#testimonials">Testimonials</a></li>
                   <li><a href="about-us.html">FAQ</a></li>
@@ -767,7 +744,10 @@
                     class="col-6 col-sm-12 col-lg-4 col-xl-12 text-right text-sm-left"
                   >
                     <div class="group group-xs">
-                      <a class="link link-social-1 mdi mdi-twitter" href="index.html"></a
+                      <a
+                        class="link link-social-1 mdi mdi-twitter"
+                        href="index.html"
+                      ></a
                       ><a
                         class="link link-social-1 mdi mdi-facebook"
                         href="index.html"
@@ -788,7 +768,9 @@
             <p class="rights">
               <span>&copy;&nbsp;</span><span class="copyright-year"></span>. All
               Rights Reserved. Design by
-              <a href="https://github.com/Rishabh01505" target="_blank">Rishabh Bhatnagar</a>
+              <a href="https://github.com/Rishabh01505" target="_blank"
+                >Rishabh Bhatnagar</a
+              >
             </p>
           </div>
         </div>
