--- a/typography.html
+++ b/typography.html
@@ -55,9 +55,7 @@
       </div>
     </div>
     <div class="page">
-      <!-- Page Header--><a
-        class="banner banner-top"
-        href="index.html"
+      <!-- Page Header--><a class="banner banner-top" href="index.html"
         ><img src="images/marketing_banner.png" alt="editkaro" height="0"
       /></a>
       <header class="section page-header">
@@ -191,63 +189,50 @@
             <div class="col-lg-9 col-xl-8">
               <ul class="list-xl">
                 <li>
-                  <h1>H1 Heading</h1>
+                  <h1>Welcome to EditKaro.in</h1>
                   <p>
-                    Welcome to our wonderful world. We sincerely hope that each
-                    and every user entering our website will find exactly what
-                    he/she is looking for. With advanced features of activating
-                    account and new login widgets, you will definitely have a
-                    great experience of using our web page.
+                    Welcome to our creative space where ideas meet execution. We
+                    are excited to help you elevate your brand with powerful
+                    marketing strategies.
                   </p>
                 </li>
                 <li>
-                  <h2>H2 Heading</h2>
+                  <h2>Join Our Community</h2>
                   <p>
-                    Welcome to our wonderful world. We sincerely hope that each
-                    and every user entering our website will find exactly what
-                    he/she is looking for. With advanced features of activating
-                    account and new login widgets, you will definitely have a
-                    great experience of using our web page.
+                    Become part of a growing network of businesses and creators
+                    who trust us to transform their online presence.
                   </p>
                 </li>
                 <li>
-                  <h3>H3 Heading</h3>
+                  <h3>Get Started Today</h3>
                   <p>
-                    Welcome to our wonderful world. We sincerely hope that each
-                    and every user entering our website will find exactly what
-                    he/she is looking for. With advanced features of activating
-                    account and new login widgets, you will definitely have a
-                    great experience of using our web page.
+                    Kickstart your journey towards better brand visibility and
+                    engagement with our tailored marketing and video editing
+                    services.
                   </p>
                 </li>
                 <li>
-                  <h4>H4 Heading</h4>
+                  <h4>Our Services</h4>
                   <p>
-                    Welcome to our wonderful world. We sincerely hope that each
-                    and every user entering our website will find exactly what
-                    he/she is looking for. With advanced features of activating
-                    account and new login widgets, you will definitely have a
-                    great experience of using our web page.
+                    From social media marketing to in-depth video production, we
+                    offer solutions that drive results and help your brand
+                    shine.
                   </p>
                 </li>
                 <li>
-                  <h5>H5 Heading</h5>
+                  <h5>Our Expertise</h5>
                   <p>
-                    Welcome to our wonderful world. We sincerely hope that each
-                    and every user entering our website will find exactly what
-                    he/she is looking for. With advanced features of activating
-                    account and new login widgets, you will definitely have a
-                    great experience of using our web page.
+                    Our team consists of seasoned marketing experts, creative
+                    designers, and data-driven strategists ready to take your
+                    brand to the next level.
                   </p>
                 </li>
                 <li>
-                  <h6>H6 Heading</h6>
+                  <h6>What We Believe In</h6>
                   <p>
-                    Welcome to our wonderful world. We sincerely hope that each
-                    and every user entering our website will find exactly what
-                    he/she is looking for. With advanced features of activating
-                    account and new login widgets, you will definitely have a
-                    great experience of using our web page.
+                    We believe in a customer-first approach, delivering
+                    personalized services that align with your business goals
+                    and vision.
                   </p>
                 </li>
               </ul>
@@ -256,52 +241,43 @@
         </div>
         <!-- HTML Text Elements-->
         <div class="container">
-          <h3>HTML Text Elements</h3>
+          <h3>Let us Create Something Together</h3>
           <p class="text-block">
-            <span class="font-weight-bold">Bold text</span>
-            <mark>This is a highlighted text</mark
-            ><span class="text-strike">This is a strickethrough text</span
-            ><span class="text-underline">This is an underlined text.</span
-            ><span
-              >Welcome to our wonderful world. We sincerely hope that each and
-              every user entering our website will find exactly what he/she is
-              looking for</span
-            ><a href="#">Link</a><a class="link-hover" href="#">Hover link</a
-            ><a class="link-active" href="#">Press link</a
-            ><span
-              >With advanced features of activating account and new login
-              widgets, you will definitely have a great experience of using our
-              web page.</span
-            ><span
-              class="tooltip-custom"
-              data-toggle="tooltip"
-              data-placement="top"
-              title="Default text"
-              >Tooltip</span
-            >
+            Collaboration is key. Let us join forces and turn your ideas into
+            impactful marketing campaigns that grow your business.
           </p>
         </div>
         <!-- Ordered & unOrdered List-->
         <div class="container">
-          <h3>Ordered & unOrdered List</h3>
+          <h3>Why Choose Us?</h3>
           <div class="row row-50">
             <div class="col-sm-6 col-md-5 col-lg-4 col-xl-3">
-              <ul class="list-marked">
-                <li>Bubos velum</li>
-                <li>Aonidess peregrinatione</li>
-                <li>Bursas cantare!</li>
-                <li>Domuss potus</li>
-                <li>Vortexs accelerare</li>
-              </ul>
-            </div>
-            <div class="col-sm-6 col-md-5 col-lg-4 col-xl-3">
-              <ol class="list-ordered">
-                <li>Parmas cadunt</li>
-                <li>Genetrixs ortum</li>
-                <li>Fraticinidas credere</li>
-                <li>Solems cantare</li>
-                <li>Follas ridetis</li>
-              </ol>
+              <dl class="list-ordered">
+                <dt>Innovative Solutions</dt>
+                <dd>
+                  We craft strategies that are both creative and result-driven.
+                </dd>
+                <dt>Expert Team</dt>
+                <dd>
+                  Our team consists of professionals with years of industry
+                  experience.
+                </dd>
+                <dt>Data-Driven Approach</dt>
+                <dd>
+                  We use analytics to refine our strategies and achieve optimal
+                  results.
+                </dd>
+                <dt>Client-Focused</dt>
+                <dd>
+                  Your success is our priority, and we tailor our services to
+                  meet your unique needs.
+                </dd>
+                <dt>Proven Track Record</dt>
+                <dd>
+                  We have helped numerous clients achieve measurable growth and
+                  increased engagement.
+                </dd>
+              </dl>
             </div>
           </div>
         </div>
@@ -315,9 +291,8 @@
                 <div class="quote-light-mark linearicons-quote-open"></div>
                 <div class="quote-light-text">
                   <p>
-                    Fidelis, brevis elevatuss grauiter acquirere de camerarius,
-                    castus brodium. Cum advena nocere, omnes demissioes vitare
-                    mirabilis, talis itineris tramitemes.
+                    "Great marketing is about making a connection, and we’re
+                    here to make it happen for you."
                   </p>
                 </div>
               </blockquote>
@@ -325,101 +300,106 @@
           </div>
         </div>
       </section>
-     <!-- Page Footer--><a
-     class="banner"
-     href="index.html"
-     ><img src="images/digital_1.jpg" alt="editkaro" height="0"
-   /></a>
-   <footer class="section footer-classic">
-     <div class="footer-classic-main">
-       <div class="container">
-         <div class="row row-50 justify-content-lg-between">
-           <div class="col-sm-7 col-lg-3 col-xl-2">
-             <a class="brand" href="index.html"
-               ><img
-                 src="images/logo.png"
-                 alt=""
-                 width="199"
-                 height="41"
-             /></a>
-             <p>
-               <span style="max-width: 250px"
-                 >Our agency provides quality digital marketing
-                 services.</span
-               >
-             </p>
-             <a
-               class="button button-sm button-default-outline button-winona"
-               href="contacts.html#touch"
-               >Get in Touch</a
-             >
-           </div>
-           <div class="col-sm-5 col-lg-3 col-xl-2">
-             <h4 class="footer-classic-title">About</h4>
-             <ul class="list footer-classic-list">
-               <li><a href="about-us.html">About Us</a></li>
-               <li><a href="about-us.html">Careers</a></li>
-               <li><a href="index.html">Press and media</a></li>
-             </ul>
-           </div>
-           <div class="col-sm-7 col-lg-5 col-xl-3">
-             <h4 class="footer-classic-title">Quick Links</h4>
-             <ul class="list footer-classic-list footer-classic-list_2-cols">
-               <li><a href="contacts.html#touch">Sign Up</a></li>
-               <li><a href="about-us.html">Our Team</a></li>
-               <li><a href="https://rishabheditkaroportfolio.netlify.app/" target="_blank">Portfolio</a></li>
-               <li><a href="contacts.html#touch">Pricing</a></li>
-               <li><a href="index.html#testimonials">Testimonials</a></li>
-               <li><a href="about-us.html">FAQ</a></li>
-               <li><a href="about-us.html">Services</a></li>
-             </ul>
-           </div>
-           <div class="col-sm-5 col-lg-9 col-xl-2">
-             <h4 class="footer-classic-title">Contact Us</h4>
-             <div class="row row-20 row-sm-35">
-               <div class="col-6 col-sm-12 col-lg-8 col-xl-12">
-                 <div class="row row-10 text-default">
-                   <div class="col-lg-6 col-xl-12">
-                     <a href="mailto:#">info@demolink.org</a>
-                   </div>
-                   <div class="col-lg-6 col-xl-12">
-                     <a class="big" href="tel:#">+1-853-234-65</a>
-                   </div>
-                 </div>
-               </div>
-               <div
-                 class="col-6 col-sm-12 col-lg-4 col-xl-12 text-right text-sm-left"
-               >
-                 <div class="group group-xs">
-                   <a class="link link-social-1 mdi mdi-twitter" href="index.html"></a
-                   ><a
-                     class="link link-social-1 mdi mdi-facebook"
-                     href="index.html"
-                   ></a
-                   ><a
-                     class="link link-social-1 mdi mdi-instagram"
-                     href="index.html"
-                   ></a>
-                 </div>
-               </div>
-             </div>
-           </div>
-         </div>
-       </div>
-     </div>
-     <div class="footer-classic-aside">
-       <div class="container">
-         <p class="rights">
-           <span>&copy;&nbsp;</span><span class="copyright-year"></span>. All
-           Rights Reserved. Design by
-           <a href="https://github.com/Rishabh01505" target="_blank">Rishabh Bhatnagar</a>
-         </p>
-       </div>
-     </div>
-   </footer>
- </div>
- <div class="snackbars" id="form-output-global"></div>
- <script src="js/core.min.js"></script>
- <script src="js/script.js"></script>
-</body>
+      <!-- Page Footer--><a class="banner" href="index.html"
+        ><img src="images/digital_1.jpg" alt="editkaro" height="0"
+      /></a>
+      <footer class="section footer-classic">
+        <div class="footer-classic-main">
+          <div class="container">
+            <div class="row row-50 justify-content-lg-between">
+              <div class="col-sm-7 col-lg-3 col-xl-2">
+                <a class="brand" href="index.html"
+                  ><img src="images/logo.png" alt="" width="199" height="41"
+                /></a>
+                <p>
+                  <span style="max-width: 250px"
+                    >Our agency provides quality digital marketing
+                    services.</span
+                  >
+                </p>
+                <a
+                  class="button button-sm button-default-outline button-winona"
+                  href="contacts.html#touch"
+                  >Get in Touch</a
+                >
+              </div>
+              <div class="col-sm-5 col-lg-3 col-xl-2">
+                <h4 class="footer-classic-title">About</h4>
+                <ul class="list footer-classic-list">
+                  <li><a href="about-us.html">About Us</a></li>
+                  <li><a href="about-us.html">Careers</a></li>
+                  <li><a href="index.html">Press and media</a></li>
+                </ul>
+              </div>
+              <div class="col-sm-7 col-lg-5 col-xl-3">
+                <h4 class="footer-classic-title">Quick Links</h4>
+                <ul class="list footer-classic-list footer-classic-list_2-cols">
+                  <li><a href="contacts.html#touch">Sign Up</a></li>
+                  <li><a href="about-us.html">Our Team</a></li>
+                  <li>
+                    <a
+                      href="https://rishabheditkaroportfolio.netlify.app/"
+                      target="_blank"
+                      >Portfolio</a
+                    >
+                  </li>
+                  <li><a href="contacts.html#touch">Pricing</a></li>
+                  <li><a href="index.html#testimonials">Testimonials</a></li>
+                  <li><a href="about-us.html">FAQ</a></li>
+                  <li><a href="about-us.html">Services</a></li>
+                </ul>
+              </div>
+              <div class="col-sm-5 col-lg-9 col-xl-2">
+                <h4 class="footer-classic-title">Contact Us</h4>
+                <div class="row row-20 row-sm-35">
+                  <div class="col-6 col-sm-12 col-lg-8 col-xl-12">
+                    <div class="row row-10 text-default">
+                      <div class="col-lg-6 col-xl-12">
+                        <a href="mailto:#">info@demolink.org</a>
+                      </div>
+                      <div class="col-lg-6 col-xl-12">
+                        <a class="big" href="tel:#">+1-853-234-65</a>
+                      </div>
+                    </div>
+                  </div>
+                  <div
+                    class="col-6 col-sm-12 col-lg-4 col-xl-12 text-right text-sm-left"
+                  >
+                    <div class="group group-xs">
+                      <a
+                        class="link link-social-1 mdi mdi-twitter"
+                        href="index.html"
+                      ></a
+                      ><a
+                        class="link link-social-1 mdi mdi-facebook"
+                        href="index.html"
+                      ></a
+                      ><a
+                        class="link link-social-1 mdi mdi-instagram"
+                        href="index.html"
+                      ></a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="footer-classic-aside">
+          <div class="container">
+            <p class="rights">
+              <span>&copy;&nbsp;</span><span class="copyright-year"></span>. All
+              Rights Reserved. Design by
+              <a href="https://github.com/Rishabh01505" target="_blank"
+                >Rishabh Bhatnagar</a
+              >
+            </p>
+          </div>
+        </div>
+      </footer>
+    </div>
+    <div class="snackbars" id="form-output-global"></div>
+    <script src="js/core.min.js"></script>
+    <script src="js/script.js"></script>
+  </body>
 </html>
